--- a/bcr.html
+++ b/bcr.html
@@ -1,6 +1,12 @@
 ﻿<html>
 	<head>
 		<title>☜ ☟ Bandcamp Revolution ☞ ☝</title>
+		<meta property="og:type" content="website"/>
+        <meta property="og:url" content="http://jeremyneiman.com/bcr/bcr.html"/>
+        <meta property="og:title" content="☜ ☟ Bandcamp Revolution ☞ ☝"/>
+        <meta property="og:image" content="http://jeremyneiman.com/bcr/screenshot.png"/>
+        <meta property="og:site_name" content="jeremyneiman.com"/>
+        <meta property="og:description" content="Play DDR on Bandcamp"/>
 		<style>
 			body {
 				background-color: #000000;
@@ -46,6 +52,10 @@
 		3. Go to a Bandcamp album or <a href="http://protodome.bandcamp.com/track/new-york-cheesecake">song</a> page.<br/>
 		4. Click on the "Play Bandcamp Revolution" link in your bookmarks bar.<br/>
 		5. Click play on the song.<br/>
+		
+		<br/><br>
+		
+		<a href="https://github.com/docmarionum1/BandcampRevolution">Check out the code on Github (don't actually - it's terrible).</a>
 	</div>
 	
 	 
