Minor tweaks and cleaning up

--- a/bcr.html
+++ b/bcr.html
@@ -41,7 +41,7 @@
 				var jsCode = document.createElement('script'); 
 				jsCode.setAttribute('src', 'http://jeremyneiman.com/bcr/bcr.js?cb=' + cachebuster);                  
 				document.body.appendChild(jsCode);
-				jsCode.onload = function() {bandCampRevolution();};
+				jsCode.onload = function() {bandCampRevolution(1);};
 			 }());">Play Bandcamp Revolution!</a>
 			 
 			 <a style="margin-left:50px" href="javascript: (function () {
@@ -49,7 +49,7 @@
 				var jsCode = document.createElement('script'); 
 				jsCode.setAttribute('src', 'http://jeremyneiman.com/bcr/bcr.js?cb=' + cachebuster);                  
 				document.body.appendChild(jsCode);
-				jsCode.onload = function() {bandCampRevolution(1000, 80000);};
+				jsCode.onload = function() {bandCampRevolution(2);};
 			 }());">Play Bandcamp Revolution! (Hard Mode)</a><br/><br/>
 		3. Go to a Bandcamp album or <a href="http://protodome.bandcamp.com/track/new-york-cheesecake">song</a> page.<br/>
 		4. Click on the "Play Bandcamp Revolution" link in your bookmarks bar.<br/>
