--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-﻿<audio src="./test10.mp3" style="width: 0px; height: 0px; visibility: hidden;"></audio>
+﻿<audio src="./test.mp3" style="width: 0px; height: 0px; visibility: hidden;"></audio>
 <div class="middleColumn"></div>
 
 <script src="bcr.js">
@@ -7,7 +7,7 @@
 
 <script type="text/javascript">
 	(function() {
-		bandCampRevolution(1);
+		bandCampRevolution(0);
 	})();
 
 </script>
