use proxy to get around CORS

--- a/test.html
+++ b/test.html
@@ -1,12 +1,14 @@
-﻿<audio src="./test.mp3" style="width: 0px; height: 0px; visibility: hidden;"></audio>
+﻿<audio
+	src="https://t4.bcbits.com/stream/8985f9691d5de98c89bd2753558e61ab/mp3-128/623400457?p=0&ts=1646750524&t=171445d6d65260c9387d1314f88009fca840b960&token=1646750524_37f17846b08c5b20e81ac9819c28f75272eb9767"
+	style="width: 0px; height: 0px; visibility: hidden;"></audio>
 <div class="middleColumn"></div>
 
 <script src="bcr.js">
-	
+
 </script>
 
 <script type="text/javascript">
-	(function() {
+	(function () {
 		bandCampRevolution(1);
 	})();
 
