--- a/index.html
+++ b/index.html
@@ -1,111 +1,123 @@
 ﻿<html>
-	<head>
-		<title>☜ ☟ Bandcamp Revolution ☞ ☝</title>
-		<meta property="og:type" content="website"/>
-        <meta property="og:url" content="http://jeremyneiman.com/bcr/bcr.html"/>
-        <meta property="og:title" content="☜ ☟ Bandcamp Revolution ☞ ☝"/>
-        <meta property="og:image" content="http://jeremyneiman.com/bcr/screenshot.png"/>
-        <meta property="og:site_name" content="jeremyneiman.com"/>
-        <meta property="og:description" content="Play DDR on Bandcamp"/>
-		<style>
-			body {
-				background-color: #000000;
-				color: #FFFFFF;
-			}
-			
-			h1 {
-				
-			}
-			
-			div {
-				margin: 50px;
-				font-size: 20pt;
-			}
-			
-			a {
-				color: #00FF8B;
-			}
-		</style>
-	</head>
+
+<head>
+	<title>☜ ☟ Bandcamp Revolution ☞ ☝︎</title>
+	<meta property="og:type" content="website" />
+	<meta property="og:url" content="http://jeremyneiman.com/bcr/bcr.html" />
+	<meta property="og:title" content="☜ ☟ Bandcamp Revolution ☞ ☝︎" />
+	<meta property="og:image" content="http://jeremyneiman.com/bcr/screenshot.png" />
+	<meta property="og:site_name" content="jeremyneiman.com" />
+	<meta property="og:description" content="Play DDR on Bandcamp" />
+	<style>
+		body {
+			background-color: #000000;
+			color: #FFFFFF;
+		}
+
+		h1 {}
+
+		div {
+			margin: 50px;
+			font-size: 20pt;
+		}
+
+		a {
+			color: #00FF8B;
+		}
+	</style>
+</head>
+
 <body>
-	<center style="color:red"><h1>
-	As of Chrome 42 the exploit this used has been fixed.  You can still play this by <a href="http://stackoverflow.com/questions/3102819/disable-same-origin-policy-in-chrome">disabling web security</a>.  But that is, well, not recommended.
-	</h1></center>
-	<center><h1>☜ ☟ Bandcamp Revolution ☞ ☝</h1></center>
+	<center style="color:red">
+		<h1>
+			As of Chrome 42 the exploit this used has been fixed. You can still play this by <a
+				href="http://stackoverflow.com/questions/3102819/disable-same-origin-policy-in-chrome">disabling web
+				security</a>. But that is, well, not recommended.
+		</h1>
+	</center>
 	<center>
-		<iframe width="630" height="477" src="https://www.youtube.com/embed/ea8xc3tvOYM" frameborder="0" allowfullscreen></iframe>
-		<iframe width="630" height="477" src="https://www.youtube.com/embed/jTeY7zW95Y0" frameborder="0" allowfullscreen></iframe>
+		<h1>☜ ☟ Bandcamp Revolution ☞ ☝︎</h1>
+	</center>
+	<center>
+		<iframe width="630" height="477" src="https://www.youtube.com/embed/ea8xc3tvOYM" frameborder="0"
+			allowfullscreen></iframe>
+		<iframe width="630" height="477" src="https://www.youtube.com/embed/jTeY7zW95Y0" frameborder="0"
+			allowfullscreen></iframe>
 	</center>
 	<div>
-		Play a game of DDR on Bandcamp with your favorite songs.<br/>
+		Play a game of DDR on Bandcamp with your favorite songs.<br />
 
-		1. Get Chrome.<br/>
-		2. Drag one of the following links into your bookmarks bar:<br/><br/>
-		
-			<a style="margin-left:50px" href="javascript: (function () {
+		1. Get Chrome.<br />
+		2. Drag one of the following links into your bookmarks bar:<br /><br />
+
+		<a style="margin-left:50px" href="javascript: (function () {
 				if (window.bandCampRevolution) {
 					bandCampRevolution(1);
 				} else {
 					var cachebuster = Math.round(new Date().getTime() / 1); 
 					var jsCode = document.createElement('script'); 
-					jsCode.setAttribute('src', '//cdn.rawgit.com/docmarionum1/BandcampRevolution/fecdad315799c92faa8b5327cc82cc0b75a09d05/bcr.js?cb=' + cachebuster);
+					jsCode.setAttribute('src', '//docmarionum1.github.io/BandcampRevolution/bcr.js?cb=' + cachebuster);
 					document.body.appendChild(jsCode);
 					jsCode.onload = function() {bandCampRevolution(1);};
 				}
-			 }());">Play Bandcamp Revolution!</a><br/>
-			 
-			 <a style="margin-left:50px" href="javascript: (function () {
+			 }());">Bandcamp Revolution!</a><br />
+
+		<a style="margin-left:50px" href="javascript: (function () {
 			 	if (window.bandCampRevolution) {
 					bandCampRevolution(2);
 				} else {
 				 	var cachebuster = Math.round(new Date().getTime() / 1);  
 					var jsCode = document.createElement('script'); 
-					jsCode.setAttribute('src', '//cdn.rawgit.com/docmarionum1/BandcampRevolution/fecdad315799c92faa8b5327cc82cc0b75a09d05/bcr.js?cb=' + cachebuster);              
+					jsCode.setAttribute('src', '//docmarionum1.github.io/BandcampRevolution/bcr.js?cb=' + cachebuster);              
 					document.body.appendChild(jsCode);
 					jsCode.onload = function() {bandCampRevolution(2);};
 				}
-			 }());">Play Bandcamp Revolution! (Hard Mode)</a><br/>
+			 }());">Bandcamp Revolution! (Hard Mode)</a><br />
 
-			 <a style="margin-left:50px" href="javascript: (function () {
+		<a style="margin-left:50px" href="javascript: (function () {
 			 	if (window.bandCampRevolution) {
 					bandCampRevolution(3);
 				} else {
 				 	var cachebuster = Math.round(new Date().getTime() / 1);  
 					var jsCode = document.createElement('script'); 
-					jsCode.setAttribute('src', '//cdn.rawgit.com/docmarionum1/BandcampRevolution/fecdad315799c92faa8b5327cc82cc0b75a09d05/bcr.js?cb=' + cachebuster);                  
+					jsCode.setAttribute('src', '//docmarionum1.github.io/BandcampRevolution/bcr.js?cb=' + cachebuster);                  
 					document.body.appendChild(jsCode);
 					jsCode.onload = function() {bandCampRevolution(3);};
 				}
-			 }());">Play Bandcamp Revolution! (Insane Mode)</a><br/>
+			 }());">Bandcamp Revolution! (Insane Mode)</a><br />
 
-			 <a style="margin-left:50px" href="javascript: (function () {
+		<a style="margin-left:50px" href="javascript: (function () {
 			 	if (window.bandCampRevolution) {
 					bandCampRevolution(0);
 				} else {
 				 	var cachebuster = Math.round(new Date().getTime() / 1);  
 					var jsCode = document.createElement('script'); 
-					jsCode.setAttribute('src', '//cdn.rawgit.com/docmarionum1/BandcampRevolution/fecdad315799c92faa8b5327cc82cc0b75a09d05/bcr.js?cb=' + cachebuster);                  
+					jsCode.setAttribute('src', '//docmarionum1.github.io/BandcampRevolution/bcr.js?cb=' + cachebuster);                  
 					document.body.appendChild(jsCode);
 					jsCode.onload = function() {bandCampRevolution(0);};
 				}
-			 }());">Play Bandcamp Revolution! (Easy Mode)</a><br/><br/>
-		3. Go to a Bandcamp album or <a href="http://protodome.bandcamp.com/track/new-york-cheesecake">song</a> page.<br/>
-		4. Click on the "Play Bandcamp Revolution" link in your bookmarks bar.<br/>
-		5. Click play on the song.<br/>
-		
-		<br/><br>
-		
-		<a href="https://github.com/docmarionum1/BandcampRevolution">Check out the code on Github (don't actually - it's terrible).</a>
+			 }());">Bandcamp Revolution! (Easy Mode)</a><br /><br />
+		3. Go to a Bandcamp album or <a href="http://protodome.bandcamp.com/track/new-york-cheesecake">song</a> page.<br />
+		4. Click on the "Play Bandcamp Revolution" link in your bookmarks bar.<br />
+		5. Click play on the song.<br />
+
+		<br /><br>
+
+		<a href="https://github.com/docmarionum1/BandcampRevolution">Check out the code on Github (don't actually - it's
+			terrible).</a>
 	</div>
-	
+
 	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+		(function (i, s, o, g, r, a, m) {
+			i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+				(i[r].q = i[r].q || []).push(arguments)
+			}, i[r].l = 1 * new Date(); a = s.createElement(o),
+				m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+		})(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
 		ga('create', 'UA-4070834-8', 'auto');
 		ga('send', 'pageview');
-	</script> 
- </body>
- </html>
+	</script>
+</body>
+
+</html>
